<resources>
    <string name="app_name">IT-SEP4-A20-App</string>
    <string name="menu_home">Home</string>
    <string name="menu_parameter">Parameters</string>
    <string name="menu_liveReadings">Live readings</string>
    <string name="navigationView">Navigation</string>
    <string name="nav_header_subtitle">Here goes subtitle /TODO change</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="key_minCo2">minCo2Level</string>
    <string name="key_maxCo2">maxCo2Level</string>
    <string name="title_editMinCo2">Edit minimum Co2 levels</string>
    <string name="title_editMaxCo2">Edit maximum Co2 levels</string>
    <string name="title_Reset">Reset</string>
    <string name="key_resetCo2">resetCo2Levels</string>
    <string name="title_resetCo2">Reset</string>
    <string name="summary_resetCo2">Reset MIN and MAX Co2 levels to recommended</string>
    <string name="key_preference_co2">co2_preferences</string>
    <string name="summary_resetTemperature">Reset MIN and MAX temperature to recommended</string>
    <string name="current_max_temperature">Current temperature setpoint %1$.1f C</string>
    <string name="title_editTemperatureSetPoint">Edit temperature setpoint</string>
    <string name="key_temperatureSetPoint">maxTemperature</string>
    <string name="key_resetTemperature">resetTemperature</string>
    <string name="title_resetTemperature">Reset temperature</string>
    <string name="is_an_invalid_number">Input must be a number</string>
    <string name="key_preference_temp">temp_preference</string>
    <string name="title_this_night">This night</string>
    <string name="title_night_status">It was a good night :)</string>
    <string name="title_temperature">Temperature</string>
    <string name="text_temperature_min">Min: %1$.1f C</string>
    <string name="text_temperature_max">Max: %1$.1f C</string>
    <string name="text_temperature_avg">AVG: %1$.1f C</string>
    <string name="title_co2">CO2</string>
    <string name="text_co2_min">Min: %1$.1f ppm</string>
    <string name="text_co2_max">Max: %1$.1f ppm</string>
    <string name="text_co2_avg">AVG: %1$.1f ppm</string>
    <string name="title_humidity">Humidity</string>
    <string name="text_humidity_min">Min: %1$.1f %%RH</string>
    <string name="text_humidity_max">Max: %1$.1f %%RH</string>
    <string name="text_humidity_avg">AVG: %1$.1f %%RH</string>
    <string name="title_last7days">Last 7 days</string>
    <string name="key_minTemperature">minTemperature</string>
    <string name="title_editMinTemperature">Edit minimum temperature</string>
    <string name="key_maxHumidity">maxHumidity</string>
    <string name="title_editMaxHumidity">Edit max humidity</string>
    <string name="key_minHumidity">minHumidity</string>
    <string name="title_editMinHumidity">Edit minimum humidity</string>
    <string name="key_resetHumidity">resetHumidity</string>
    <string name="title_resetHumidity">Reset humidity to recommended</string>
    <string name="key_preference_humidity">humidity_preference</string>
    <string name="current_min_temperature">Current minimum temperature: %1$.1f C</string>
    <string name="current_max_humidity">Current max humidity: %1$d %%RH</string>
    <string name="current_min_humidity">Current min humidity: %1$d %%RH</string>
    <string name="current_min_co2">Current minimum value is: %1$d ppm</string>
    <string name="current_max_co2">Current maximum value is: %1$d ppm</string>
    <string name="summary_reset_humidity">Reset humidity to recommended</string>
    <string name="summary_reset_temperature">Reset temperature setpoint to recommended</string>
    <string name='key_roomID'>Room ID</string>
    <string name='title_editRoomID'>Edit Room ID</string>
    <string name='key_preference_room'>Room_preferences</string>
    <string name="co2_current_reading">Current CO2:</string>
    <string name="current_temperature">Current temperature:</string>
    <string name="current_humidity">Current humidity:</string>
    <string name="summary_reset_temperature">Reset temperature set point to recommended</string>
    <string name="current_servo_position">Position of the servo is at %1$d %%</string>
    <string name="current_window_state_open">The window is open.</string>
    <string name="current_window_state_closed">The window is closed.</string>
    <string name="summary_reset_temperature">Reset temperature to recommended</string>
    <string name='key_deviceID'>Device ID</string>
    <string name='title_editDeviceID'>Edit Device ID</string>
    <string name='key_preference_device'>Device_preferences</string>
    <string name='key_preference_device_add'>Device_preferences_add</string>
</resources>