<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="ui.detailedreadings.DetailedReadingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_co2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_co2_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_co2"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_co2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/line_chart_co2"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart_co2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_co2_headline" />

            <LinearLayout
                android:id="@+id/linear_layout_co2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="99"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_co2"
                app:layout_constraintStart_toStartOf="@+id/line_chart_co2"
                app:layout_constraintTop_toBottomOf="@+id/line_chart_co2">

                <TextView
                    android:id="@+id/text_co2_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_temperature_min"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/text_co2_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_temperature_max"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/text_co2_avg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_temperature_avg"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_co2"
                app:layout_constraintStart_toStartOf="@+id/line_chart_co2"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_co2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_co2">

            <TextView
                android:id="@+id/text_temperature_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_temperature"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_temperature"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/line_chart_temperature"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart_temperature"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_temperature_headline" />

            <LinearLayout
                android:id="@+id/linear_layout_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="99"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_temperature"
                app:layout_constraintStart_toStartOf="@+id/line_chart_temperature"
                app:layout_constraintTop_toBottomOf="@+id/line_chart_temperature">

                <TextView
                    android:id="@+id/text_temperature_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_co2_min"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/text_temperature_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_co2_max"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/text_temperature_avg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_co2_avg"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_temperature"
                app:layout_constraintStart_toStartOf="@+id/line_chart_temperature"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_temperature" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_temperature">

            <TextView
                android:id="@+id/text_humidity_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_humidity"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_humidity"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/line_chart_humidity"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart_humidity"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_humidity_headline" />

            <LinearLayout
                android:id="@+id/linear_layout_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="99"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_humidity"
                app:layout_constraintStart_toStartOf="@+id/line_chart_humidity"
                app:layout_constraintTop_toBottomOf="@+id/line_chart_humidity">

                <TextView
                    android:id="@+id/text_humidity_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_humidity_min"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/text_humidity_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_humidity_max"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/text_humidity_avg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="33"
                    android:text="@string/text_humidity_avg"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/line_chart_humidity"
                app:layout_constraintStart_toStartOf="@+id/line_chart_humidity"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_humidity" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>